# kafka-python

./: .gitignore  3brokers-dockercompose-file.yaml  admin.py  avro_consumer.py  avro_producer.py  consumer.py  docker-compose.yaml  json_producer.py  producer.py  pyproject.toml  schema.avsc  schema.json  schema_client_registry.py
